--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "browser-sync": "^2.18.13",
     "gulp": "^3.9.1",
     "gulp-postcss": "^7.0.0",
+    "jquery": "^3.2.1",
+    "normalize.css": "^7.0.0",
     "postcss-color-function": "^4.0.1",
     "postcss-hexrgba": "^1.0.0",
     "postcss-import": "^11.0.0",
@@ -27,8 +29,6 @@
     "webpack": "^3.10.0"
   },
   "dependencies": {
-    "jquery": "3.2.1",
-    "normalize.css": "7.0.0",
     "slick-carousel": "1.8.1"
   }
 }
